# ac-evo-pedal-telemetry

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md
.github/agents/: overlay-research.agent.md
.github/skills/racing-overlay/: SKILL.md
src/: input.rs  main.rs  telemetry.rs  widgets.rs
