[package]
name = "racing_pedal_overlay"
version = "0.3.0"
edition = "2021"
description = "Transparent always-on-top HUD overlay for sim racing — pedal graph, gear, speed, steering wheel, and ABS detection"
license = "MIT"
repository = "https://github.com/hammerkid/ac-evo-pedal-telemetry"
keywords = ["sim-racing", "overlay", "telemetry", "egui", "assetto-corsa"]
categories = ["games", "visualization"]

[dependencies]
eframe = { version = "0.30", default-features = true }
egui_plot = "0.30"
gilrs = "0.11"
